# conoways_game_of_life_cpp_console

./: .gitignore  CMakeLists.txt  GameOfLife  README.md  main.cpp
include/: Board.hpp  Cell.hpp
src/: Board.cpp  Cell.cpp
